tests/paczka1/fuzzy1/54914127.err
Error in line 6: xhZKTggyvoc A543 32,0
Error in line 17: S297 S297 93,9
Error in line 22: S297 A543 308,94
Error in line 25: FTHK S43 2,66
Error in line 20: S297 A543 86,4
Error in line 28: aDCg3v4 S43 23,2
Error in line 31: 6hvhdfg S819 11,2
Error in line 23: FTHK A543 77,8
